--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
                 <th>Email</th>
                 <th></th>
                 <th></th>
+                <th></th>
             </tr>
         </thead>       <tbody>
             {% for persona in personas %}
@@ -37,6 +38,7 @@
                 <td>{{ persona.email }}</td>
             <td><a href="ver/{{persona.id}}">Ver</a></td>
             <td><a href="editar/{{persona.id}}">Editar</a></td>
+            <td><a href="eliminar/{{persona.id}}">Eliminar</a></td>
             </tr>
             {% endfor  %}
         </tbody>
